--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
