done with shadcn config

--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "src/components/shadcn",
-    "utils": "src/utils/shadcn-utils"
+    "components": "@/components",
+    "utils": "@/utils/shadcn-utils"
   }
 }
