--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-type-animation": "^3.2.0",
     "sass": "^1.77.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
