--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^3.2.0",
+    "react-use-scroll-snap": "^1.0.0",
     "sass": "^1.77.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
