--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.1.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -35,7 +36,8 @@
     "react-use-scroll-snap": "^1.0.0",
     "sass": "^1.77.2",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
