--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/pages/_app.mdx"
-  ],
+, "src/pages/index.tsx"  ],
   "exclude": ["node_modules"]
 }
